CHANGES IN R VERSION 0.5.3:
  MAJOR CHANGES:
    * Moved the data diagnosis submenu of the data menu to the report menu. (#20) 
    
    
    
CHANGES IN R VERSION 0.5.2:
  NEW FUCTION LIST:
  * Discriptive Statistics 
    - Summary Table 
      - Numerical Variable (#12)
      - Frequency Table for Categorical Variable (#16)
      - Contingency Table for Categorical Variable (#17)
  * Support to create report 
    - html_br() add a new line in html
    
 
      
CHANGES IN R VERSION 0.5.1:
  NEW FUCTION LIST:
  * Discriptive Statistics 
    - Correlation 
      - Correlation Matrix (#9)
      - Correlation Test (#3)
        
  BUG FIXES:
    * Fixed an error with error message that is "invalid multibyte string at" 
      in launch() when excute in MS-Windows 10. (thanks @statkclee, #1)

  MAJOR CHANGES:
    * Implement logic to get a matching alternative message by receiving 
      the value of a specific location as a parameter (#4) 
      
  MINOR CHANGES:
    * The engine for i18n was changed from the shiny.i18n package to a 
      self-developed function. The reason is that an error occurred in the 
      logic for converting Hangul messages in MS-Windows.
    * The xlsx package was replaced with the openxlsx package for handling 
      excel files. This is because the openxlsx package is a package that 
      does not require JAVA.
    
    
      
CHANGES IN R VERSION 0.5.0:
  FUCTION LIST:
  * Data
    - Prepare data menu 
      - Import data
        . CSV(TSV) files
        . Excel files
        . R data files
      - Manage data
        . Overview dataset
        . Edit dataset information
        . Download datasets
        . Export all datasets and meta data
    - Diagnose data
      - Overview of data diagnosis
      - Overview variables
      - Overview outlers
      - Reporting
        . PDF
        . html
    - Transform data
      - Manipulate variables
        . Rename variables
        . Change data type
        . Remove variables